--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,16 @@ requires-python = ">=3.13"
 authors = [{ name = "Theodore Pinkerton", email = "p_t@fastmail.net" }]
 dependencies = ["jax", "equinox", "optax", "diffrax"]
 
+[project.optional-dependencies]
+test = ["pytest>=8.3", "pyright>=1.1"]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.pytest.ini_options]
+pythonpath = "."
+addopts = ["--import-mode=importlib", "-Werror"]
 
 [tool.ruff.lint]
 fixable = ["I001", "F401"]
