--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "oryx"
 version = "0.0.1"
-license = "Apache-2.0"
+license = "GPL-3.0-or-later"
 license-files = ["LICENSE"]
 description = "Deep Reinforcement Learning with JAX and Equinox."
 readme = "README.md"
