Wrap Distreqx distributions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ description = "Deep Reinforcement Learning with JAX and Equinox."
 readme = "README.md"
 requires-python = ">=3.13"
 authors = [{ name = "Theodore Pinkerton", email = "p_t@fastmail.net" }]
-dependencies = ["jax", "equinox", "optax", "diffrax"]
+dependencies = ["jax", "equinox", "optax", "diffrax", "distreqx"]
 
 [project.optional-dependencies]
 test = ["pytest>=8.3", "pyright>=1.1"]
