--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [{ name = "Theodore Pinkerton", email = "p_t@fastmail.net" }]
 dependencies = ["jax", "equinox", "optax", "diffrax", "distreqx"]
 
 [project.optional-dependencies]
-test = ["pytest>=8.3", "pyright>=1.1"]
+test = ["pytest", "pyright"]
 
 [build-system]
 requires = ["hatchling"]
