--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 authors = [{ name = "Theodore Pinkerton", email = "p_t@fastmail.net" }]
 dependencies = [
-  "jax",
+  "jax <= 0.6 ",  # Lock Jax for compatibility with Equinox
   "equinox",
   "optax",
   "diffrax",
