--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lerax"
-version = "0.0.1"
+version = "0.0.1a0"
 description = "Deep Reinforcement Learning with JAX and Equinox."
 readme = "README.md"
 requires-python = ">=3.13"
@@ -20,6 +20,12 @@ dependencies = [
   "tensorboardX",
 ]
 
+[project.urls]
+documentation = "https://docs.tedpinkerton.ca/lerax"
+homepage = "https://github.com/RunnersNum40/lerax"
+issues = "https://github.com/RunnersNum40/lerax/issues"
+source = "https://github.com/RunnersNum40/lerax.git"
+
 [project.optional-dependencies]
 compatibility = ["gymnasium", "stable-baselines3", "torch"]
 docs = ["mkdocs-material"]
@@ -37,6 +43,12 @@ test = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["lerax"]
+
+[tool.hatch.build.targets.sdist]
+include = ["lerax", "README.md", "LICENSE", "pyproject.toml"]
 
 [tool.pyright]
 reportIncompatibleMethodOverride = true
