--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,5 @@ jobs:
         run: ruff check
       - name: Run Type Checking
         run: pyright
-      - name: Run tests
-        run: pytest -n auto
+      # - name: Run tests
+      #   run: pytest -n auto
