--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,20 +15,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          cache: "pip"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[test]
+        run: pip install .[test]
       - name: Lint
         run: ruff check
       - name: Run Type Checking
         run: pyright
-      # - name: Run tests
-      #   run: pytest -n auto
+      - name: Run tests
+        run: pytest -n auto
