--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ issues = "https://github.com/RunnersNum40/lerax/issues"
 source = "https://github.com/RunnersNum40/lerax.git"
 
 [project.optional-dependencies]
-compatibility = ["gymnasium", "stable-baselines3", "torch"]
+compatibility = ["gymnasium", "stable-baselines3"]
 docs = ["mkdocs-material"]
 test = [
   "pytest",
@@ -37,7 +37,6 @@ test = [
   "ruff",
   "gymnasium",
   "stable-baselines3",
-  "torch",
 ]
 
 [build-system]
@@ -52,7 +51,7 @@ include = ["lerax", "README.md", "LICENSE", "pyproject.toml"]
 
 [tool.pyright]
 reportIncompatibleMethodOverride = true
-reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar
+reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
 reportFunctionMemberAccess = false
 
 [tool.pytest.ini_options]
