--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lerax"
-version = "0.0.1a1"
+version = "0.0.2"
 description = "Deep Reinforcement Learning with JAX and Equinox."
 readme = "README.md"
 requires-python = ">=3.13"
