--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ source = "https://github.com/RunnersNum40/lerax.git"
 
 [project.optional-dependencies]
 compatibility = ["gymnasium", "stable-baselines3", "gymnax", "flax"]
-docs = ["mkdocs-material"]
+docs = ["zensical", "griffe"]
 test = [
   "pytest",
   "pytest-cov",
