--- a/zensical.toml
+++ b/zensical.toml
@@ -52,6 +52,15 @@ toggle.name = "Switch to light mode"
 logo = "lucide/book-x"
 repo = "fontawesome/brands/github"
 
+[project.plugins.mkdocstrings.handlers.python]
+inventories = ["https://docs.python.org/3/objects.inv"]
+paths = ["lerax", "examples"]
+
+[project.plugins.mkdocstrings.handlers.python.options]
+docstring_style = "google"
+inherited_members = true
+show_source = false
+
 [project.markdown_extensions.attr_list]
 
 [project.markdown_extensions.pymdownx.highlight]
