Use Google style docstrings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
   "jax",
   "jaxtyping",
   "optax",
-  "pygame",
   "rich",
   "tensorboard",
   "tensorboardX",
@@ -29,6 +28,7 @@ source = "https://github.com/RunnersNum40/lerax.git"
 [project.optional-dependencies]
 compatibility = ["gymnasium", "stable-baselines3", "gymnax", "flax"]
 docs = ["zensical", "griffe", "mkdocstrings-python"]
+render = ["pygame", "imageio", "imageio-ffmpeg"]
 test = [
   "pytest",
   "pytest-cov",
