Add render deps to main deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,12 @@ dependencies = [
   "diffrax",
   "distreqx",
   "equinox",
+  "imageio",
+  "imageio-ffmpeg",
   "jax",
   "jaxtyping",
   "optax",
+  "pygame",
   "rich",
   "tensorboard",
   "tensorboardX",
@@ -28,7 +31,6 @@ source = "https://github.com/RunnersNum40/lerax.git"
 [project.optional-dependencies]
 compatibility = ["gymnasium", "stable-baselines3", "gymnax", "flax"]
 docs = ["zensical", "mkdocstrings-python"]
-render = ["pygame", "imageio", "imageio-ffmpeg"]
 test = [
   "pytest",
   "pytest-cov",
@@ -53,7 +55,7 @@ include = ["lerax", "README.md", "LICENSE", "pyproject.toml"]
 
 [tool.pyright]
 reportIncompatibleMethodOverride = true
-reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
+reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar
 reportFunctionMemberAccess = false
 
 [tool.pytest]
