Make rendering deps optional

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,9 @@ dependencies = [
   "diffrax",
   "distreqx",
   "equinox",
-  "imageio",
-  "imageio-ffmpeg",
   "jax",
   "jaxtyping",
   "optax",
-  "pygame",
   "rich",
   "tensorboard",
   "tensorboardX",
@@ -31,6 +28,7 @@ source = "https://github.com/RunnersNum40/lerax.git"
 [project.optional-dependencies]
 compatibility = ["gymnasium", "stable-baselines3", "gymnax", "flax"]
 docs = ["zensical", "mkdocstrings-python"]
+render = ["pygame", "imageio", "imageio-ffmpeg"]
 test = [
   "pytest",
   "pytest-cov",
