--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,10 @@ dependencies = [
   "equinox",
   "jax",
   "jaxtyping",
-  "mujoco-mjx",
   "optax",
   "rich",
   "tensorboard",
-  "tensorboardX"
+  "tensorboardX",
 ]
 
 [project.urls]
@@ -29,6 +28,7 @@ source = "https://github.com/RunnersNum40/lerax.git"
 [project.optional-dependencies]
 compatibility = ["gymnasium", "stable-baselines3", "gymnax", "flax"]
 docs = ["zensical", "mkdocstrings-python"]
+mujoco = ["mujoco-mjx"]
 render = ["pygame", "imageio", "imageio-ffmpeg"]
 test = [
   "pytest",
@@ -54,7 +54,7 @@ include = ["lerax", "README.md", "LICENSE", "pyproject.toml"]
 
 [tool.pyright]
 reportIncompatibleMethodOverride = true
-reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
+reportIncompatibleVariableOverride = false        # Incompatible with eqx.AbstractVar
 reportFunctionMemberAccess = false
 stubPath = "stubs"
 include = ["lerax/**", "examples/**", "tests/**"]
