--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,19 +27,17 @@ source = "https://github.com/RunnersNum40/lerax.git"
 
 [project.optional-dependencies]
 compatibility = ["gymnasium", "stable-baselines3", "gymnax", "flax"]
-docs = ["zensical", "mkdocstrings-python"]
 mujoco = ["mujoco-mjx"]
 render = ["pygame", "imageio", "imageio-ffmpeg"]
-test = [
+
+[dependency-groups]
+dev = [
+  "mkdocstrings-python",
+  "pyright",
   "pytest",
   "pytest-cov",
-  "pytest-xdist",
-  "pyright",
   "ruff",
-  "gymnasium",
-  "stable-baselines3",
-  "gymnax",
-  "flax",
+  "zensical",
 ]
 
 [build-system]
@@ -54,7 +52,7 @@ include = ["lerax", "README.md", "LICENSE", "pyproject.toml"]
 
 [tool.pyright]
 reportIncompatibleMethodOverride = true
-reportIncompatibleVariableOverride = false        # Incompatible with eqx.AbstractVar
+reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
 reportFunctionMemberAccess = false
 stubPath = "stubs"
 include = ["lerax/**", "examples/**", "tests/**"]
