--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,17 +14,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-python@v6
-        with:
-          python-version: "3.x"
-          cache: "pip"
-
-      - name: Install dependencies
-        run: pip install build
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
       - name: Build
-        run: python -m build
+        run: uv build
       - name: Upload build
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: dist
           path: dist/
@@ -38,16 +33,16 @@ jobs:
     permissions:
       id-token: write
     steps:
+      - uses: actions/checkout@v5
       - name: Download built distributions
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: dist
           path: dist/
-
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
       - name: Publish to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
+        run: uv publish --index testpypi
 
   publish:
     name: Publish to PyPI
@@ -59,10 +54,11 @@ jobs:
       id-token: write
     steps:
       - name: Download built distributions
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: dist
           path: dist/
-
-      - name: Publish to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+      - name: Publish to PyPI
+        run: uv publish
