--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,16 +7,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
       - name: Setup Python
         uses: actions/setup-python@v6
         with:
           python-version: "3.13"
-          cache: "pip"
-      - name: Install dependencies
-        run: pip install .[test]
+      - name: Install Project
+        run: uv sync --locked --all-extras --dev
       - name: Lint
-        run: ruff check
+        run: uv run ruff check
       - name: Run Type Checking
-        run: pyright
+        run: uv run pyright
       - name: Run tests
-        run: pytest -n auto
+        run: uv run pytest -n auto
