--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,10 +49,10 @@ dev = [
 
 [tool.pyright]
 reportIncompatibleMethodOverride = true
-reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
+reportIncompatibleVariableOverride = false      # Incompatible with eqx.AbstractVar
 reportFunctionMemberAccess = false
 stubPath = "stubs"
-include = ["lerax/**", "examples/**", "tests/**"]
+include = ["src/**", "examples/**", "tests/**"]
 
 [tool.pytest]
 addopts = ["--cov=lerax", "--import-mode=importlib", "-Werror"]
