--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,10 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: "3.13"
-      - name: Install Project
+      - name: Install Project Dependencies
         run: uv sync --locked --all-extras --dev
+      - name: Install Project
+        run: uv pip install -e .
       - name: Lint
         run: uv run ruff check
       - name: Run Type Checking
