Remove Werror from tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,13 +49,13 @@ dev = [
 
 [tool.pyright]
 reportIncompatibleMethodOverride = true
-reportIncompatibleVariableOverride = false      # Incompatible with eqx.AbstractVar
+reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
 reportFunctionMemberAccess = false
 stubPath = "stubs"
 include = ["src/**", "examples/**", "tests/**"]
 
 [tool.pytest]
-addopts = ["--cov=lerax", "--import-mode=importlib", "-Werror"]
+addopts = ["--cov=lerax", "--import-mode=importlib"]
 strict = true
 testpaths = ["tests"]
 
