--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Lint
         run: uv run ruff check
       - name: Run Type Checking
-        run: uv run basedpyright
+        run: uv run ty check
       - name: Run tests
         run: uv run pytest -n auto --no-cov
