--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,15 @@ dependencies = [
   "diffrax>=0.7.0",
   "distreqx>=0.0.2",
   "equinox>=0.13.3",
+  "flax>=0.12.2",
+  "gymnasium>=1.2.3",
+  "gymnax>=0.0.9",
   "jax>=0.9.0",
   "jaxtyping>=0.3.6",
+  "mujoco-mjx>=3.4.0",
   "optax>=0.2.6",
   "rich>=14.3.1",
+  "stable-baselines3>=2.7.1",
   "tensorboard>=2.20.0",
   "tensorboardX>=2.6.4",
 ]
@@ -26,14 +31,6 @@ issues = "https://github.com/RunnersNum40/lerax/issues"
 source = "https://github.com/RunnersNum40/lerax.git"
 
 [project.optional-dependencies]
-compatibility = [
-  "gymnasium>=1.2.3",
-  "stable-baselines3>=2.7.1",
-  "gymnax>=0.0.9",
-  "flax>=0.12.2",
-]
-docs = ["zensical>=0.0.19", "mkdocstrings-python>=2.0.1"]
-mujoco = ["mujoco-mjx>=3.4.0"]
 render = ["pygame>=2.6.1", "imageio>=2.37.2", "imageio-ffmpeg>=0.6.0"]
 
 [dependency-groups]
@@ -75,6 +72,9 @@ docstring-code-format = true
 fixable = ["I001", "F401"]
 ignore = ["E402", "E721", "E731", "E741", "F722", "E501"]
 select = ["E", "F", "I001"]
+
+[tool.setuptools.package-data]
+lerax = ["env/mujoco/assets/**"]
 
 [tool.ty]
 [tool.ty.rules]
