--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ ignore = ["E402", "E721", "E731", "E741", "F722", "E501"]
 select = ["E", "F", "I001"]
 
 [tool.setuptools.package-data]
-lerax = ["env/mujoco/assets/**"]
+lerax = ["env/mujoco/assets/**", "env/unitree/g1/assets/**"]
 
 [tool.ty]
 [tool.ty.rules]
