--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "imageio-ffmpeg>=0.6.0",
   "jax>=0.9.0",
   "jaxtyping>=0.3.6",
+  "moviepy>=2.2.1",
   "mujoco-mjx>=3.4.0",
   "optax>=0.2.6",
   "pygame>=2.6.1",
